--- a/design.ipynb
+++ b/design.ipynb
@@ -2,103 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (711270465.py, line 73)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 73\u001b[1;36m\u001b[0m\n\u001b[1;33m    )\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-05-04 20:26:47,930] ERROR in app: Exception on /_alive_d286297f-53d1-429b-bcae-15a72c021ab3 [GET]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\flask\\app.py\", line 1463, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\flask\\app.py\", line 872, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\flask\\app.py\", line 868, in full_dispatch_request\n",
+      "    rv = self.preprocess_request()\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\flask\\app.py\", line 1243, in preprocess_request\n",
+      "    rv = self.ensure_sync(before_func)()\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\dash\\dash.py\", line 1343, in _setup_server\n",
+      "    _validate.validate_layout(self.layout, self._layout_value())\n",
+      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\dash\\_validate.py\", line 416, in validate_layout\n",
+      "    raise exceptions.DuplicateIdError(\n",
+      "dash.exceptions.DuplicateIdError: Duplicate component id found in the initial layout: `contact-us-btn`\n"
      ]
-    }
-   ],
-   "source": [
-    "import dash\n",
-    "import dash_core_components as dcc\n",
-    "import dash_html_components as html\n",
-    "\n",
-    "# Define the Dash app\n",
-    "app = dash.Dash()\n",
-    "\n",
-    "# Define the layout of the web page\n",
-    "app.layout = html.Div(\n",
-    "    html.Div([\n",
-    "        html.H1('Revive your pictures with a splash of colors!', \n",
-    "                style={'color': 'white', \n",
-    "                       'font-family': 'Lucida Handwriting',\n",
-    "                       'justify-content': 'center', \n",
-    "                       'align-items': 'flex-start', \n",
-    "                       'textAlign': 'center' }),\n",
-    "    ]),\n",
-    "\n",
-    "\n",
-    "    style={\n",
-    "        'background-image': 'url(\"/assets/splash.jpg\")', \n",
-    "        'background-size': 'cover',  \n",
-    "        'background-position': 'center',  \n",
-    "        'height': '100vh',\n",
-    "        'textAlign': 'center',  \n",
-    "        'display': 'flex',  \n",
-    "        'justifyContent': 'center',  \n",
-    "        'alignItems': 'center',  \n",
-    "    },\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "# add a font style to the text  \n",
-    "        # html.H1('Revive your pictures with a splash of colors!', \n",
-    "        #         style={'color': 'white', \n",
-    "        #                'font-family': 'Lucida Handwriting',\n",
-    "        #                'justify-content': 'center', \n",
-    "        #                'align-items': 'flex-start', \n",
-    "        #                'textAlign': 'center' }),\n",
-    "\n",
-    "    \n",
-    "               \n",
-    "        html.H2('Image Upload', \n",
-    "                        style={'color': 'red', \n",
-    "                               'font-family': 'Papyrus', \n",
-    "                               'text-align': 'left'}),\n",
-    "                    \n",
-    "            \n",
-    "        dcc.Upload(\n",
-    "            id='upload-image',\n",
-    "            children=html.Div([\n",
-    "                'Drag and Drop or ',\n",
-    "                html.A('Select an Image',style={'text-align': 'left'} )\n",
-    "            ]),\n",
-    "            style={\n",
-    "                'width': '50%',\n",
-    "                'height': '60px',\n",
-    "                'lineHeight': '60px',\n",
-    "                'borderWidth': '1px',\n",
-    "                'borderStyle': 'dashed',\n",
-    "                'borderRadius': '5px',\n",
-    "                'margin': 'auto',\n",
-    "                'background-color': 'grey',\n",
-    "                'color': 'white', \n",
-    "                'textAlign': 'center',\n",
-    "                'marginTop': '20px'\n",
-    "            },\n",
-    "            # Allow only images to be uploaded\n",
-    "            accept='image/*'\n",
-    "        ),\n",
-    "        html.Div(id='output-image-upload'),\n",
-    "    \n",
-    ")  \n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    app.run_server(port=4050)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -114,7 +45,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1bda4722390>"
+       "<IPython.lib.display.IFrame at 0x1bda611a110>"
       ]
      },
      "metadata": {},
@@ -145,51 +76,106 @@
     "        html.Img(src=\"/assets/splash.jpg\", \n",
     "                 style={\n",
     "                        'background-size': 'cover', \n",
+    "                        'background-position': 'center',\n",
     "                        'width': '100%', \n",
-    "                        'background-position': 'center',  \n",
-    "                        'height': '100vh',\n",
+    "                        'height': 'auto',\n",
     "                        'textAlign': 'center',  \n",
     "                        'display': 'flex',  \n",
     "                        'justifyContent': 'center',  \n",
-    "                        'alignItems': 'center'  }),\n",
+    "                        'alignItems': 'center',\n",
+    "                        'maxWidth': \"100vw\" ,\n",
+    "                        \"object-fit\": \"cover\"}),\n",
     "\n",
-    "         html.Div(style={'position': 'absolute', 'top': '50%', 'left': '50%', 'transform': 'translate(-50%, -50%)'},\n",
+    "         html.Div(style={'position': 'absolute','marginBottom': '1em', 'top': '50%', 'left': '50%'},\n",
     "                 children=[\n",
     "                     html.P([\"Welcome to Colorify, where black and white memories\",\n",
     "                            html.Br(),\n",
-    "                            \"find their vibrant voice! With our innovative models,\",\n",
-    "                             html.Br(),\n",
-    "                            \"we sprinkle a touch of magic onto your monochrome snapshots,\",\n",
+    "                            \"find their vibrant voice!\",\n",
     "                            html.Br(),\n",
-    "                            \"revealing the hidden beauty of the past in vivid color. \",\n",
     "                            html.Br(),\n",
-    "                            \"Step into a world where nostalgia meets technicolor charm, \",\n",
     "                            html.Br(),\n",
-    "                            \"only at Colorify!\", \n",
+    "                            \"Reveal the hidden beauty\",\n",
+    "                            html.Br(),\n",
+    "                             \" of the past with our\",\n",
+    "                            html.Br(),\n",
+    "                            \" innovative models!\",\n",
+    "                            html.Br(),      \n",
     "                     ],\n",
+    "\n",
     "                            style={'textAlign': 'left', \n",
     "                                   'color': 'white',\n",
     "                                   'text-align': 'left',\n",
-    "                                   'transform': 'translate(-120%, -50%)'\n",
+    "                                   'marginBottom': '80px',\n",
+    "                                   'height': '20px',\n",
+    "                                   'lineHeight': '2',\n",
+    "                                   'fontSize': '24px',\n",
+    "                                   'font-family': 'Lucida Handwriting',\n",
+    "                                   'margin-left': '-700px',\n",
+    "                                   'margin-top': '-200px',\n",
+    "                                   }),\n",
+    "\n",
+    "                    html.P([\"Select a model: \", ],\n",
+    "                            style={'textAlign': 'left', \n",
+    "                                   'color': 'blue',\n",
+    "                                   'fontSize': '20px',\n",
+    "                                   'text-align': 'left',\n",
+    "                                   'margin-left': '450px',\n",
+    "                                   'marginBottom': '60px',\n",
+    "                                   'height': '20px',\n",
+    "                                   'font-family': 'Lucida Handwriting',\n",
+    "                                   }),\n",
+    "\n",
+    "                    html.Button('Using GANs', id='learn-more-btn', n_clicks=0, \n",
+    "                            style={'marginRight': '10px',\n",
+    "                                   'margin-left': '440px', \n",
+    "                                   'marginBottom': '30px',\n",
+    "                                   'height': '50px',\n",
+    "                                   'width': '200px',\n",
+    "                                   'display':'block'\n",
+    "                                   }),\n",
+    "\n",
+    "                    html.Button('Using Autoencoders', id='contact-us-btn', n_clicks=0,\n",
+    "                            style={'marginRight': '10px',\n",
+    "                                   'margin-left': '440px',\n",
+    "                                   'marginBottom': '30px',\n",
+    "                                   'height': '50px',\n",
+    "                                   'width': '200px',\n",
+    "                                   'display':'block'\n",
+    "                                   }),\n",
+    "\n",
+    "                    html.Button('Using OpenCV', id='contact-us-btn', n_clicks=0,\n",
+    "                            style={'marginRight': '10px',\n",
+    "                                   'margin-left': '440px',\n",
+    "                                   'marginBottom': '80px',\n",
+    "                                   'height': '50px',\n",
+    "                                   'width': '200px'\n",
     "                                   })\n",
     "                 ])\n",
     "\n",
-    "\n",
     "    ]), \n",
+    "    html.Br(),\n",
     "\n",
-    "        html.H2('Image Upload', \n",
+    "        html.H2('Image Upload:', \n",
     "                style={'color': 'red', \n",
-    "                       'font-family': 'Papyrus', \n",
-    "                       'text-align': 'left'}),\n",
+    "                       'justify-content': 'center',\n",
+    "                        'textAlign': 'center' ,\n",
+    "                        'marginBottom': '50px',\n",
+    "                        'height': '20px',\n",
+    "                        'fontSize': '24px',\n",
+    "                        'font-family': 'Lucida Handwriting'\n",
+    "                        }),\n",
+    "\n",
     "        dcc.Upload(\n",
     "            id='upload-image',\n",
     "            children=html.Div([\n",
     "                'Drag and Drop or ',\n",
-    "                html.A('Select an Image',style={'text-align': 'left'} )\n",
+    "                html.A('Select an Image', style={'text-align': 'center'} )\n",
     "            ]),\n",
+    "\n",
     "            style={\n",
-    "                'width': '50%',\n",
-    "                'height': '60px',\n",
+    "                'width': '80%',\n",
+    "                'text-align': 'center',\n",
+    "                'height': '150px',\n",
     "                'lineHeight': '60px',\n",
     "                'borderWidth': '1px',\n",
     "                'borderStyle': 'dashed',\n",
@@ -198,83 +184,31 @@
     "                'background-color': 'grey',\n",
     "                'color': 'white', \n",
     "                'textAlign': 'center',\n",
-    "                'marginTop': '20px'\n",
+    "                'marginTop': '20px',\n",
+    "                'fontSize': '18px',\n",
+    "                'display': 'flex',\n",
+    "                'justifyContent': 'center',\n",
+    "                'alignItems': 'center',\n",
+    "                'font-family': 'Lucida Handwriting'\n",
     "            },\n",
+    "\n",
     "            # Allow only images to be uploaded\n",
     "            accept='image/*'\n",
     "        ),\n",
+    "\n",
     "        html.Div(id='output-image-upload'),\n",
+    "\n",
+    "        html.Br(),\n",
+    "        html.Br(),\n",
+    "        html.Br(),\n",
+    "\n",
     "    ],\n",
     "    \n",
     ")\n",
     "\n",
     "\n",
-    "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(port=4051)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1bda4820350>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import dash\n",
-    "import dash_core_components as dcc\n",
-    "import dash_html_components as html\n",
-    "\n",
-    "# Define the Dash app\n",
-    "app = dash.Dash(__name__)\n",
-    "\n",
-    "# Define the layout of the web page\n",
-    "app.layout = html.Div([\n",
-    "    dcc.Upload(\n",
-    "        id='upload-image',\n",
-    "        children=html.Div([\n",
-    "            'Drag and Drop or ',\n",
-    "            html.A('Select an Image')\n",
-    "        ]),\n",
-    "        style={\n",
-    "            'width': '100%',\n",
-    "            'height': '60px',\n",
-    "            'lineHeight': '60px',\n",
-    "            'borderWidth': '1px',\n",
-    "            'borderStyle': 'dashed',\n",
-    "            'borderRadius': '5px',\n",
-    "            'textAlign': 'center',\n",
-    "            'margin': '10px'\n",
-    "        },\n",
-    "        # Allow only images to be uploaded\n",
-    "        accept='image/*'\n",
-    "    ),\n",
-    "    html.Div(id='output-image-upload'),\n",
-    "])\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    app.run_server(debug=True)\n"
    ]
   }
  ],
