--- a/design.ipynb
+++ b/design.ipynb
@@ -2,34 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2024-05-04 20:26:47,930] ERROR in app: Exception on /_alive_d286297f-53d1-429b-bcae-15a72c021ab3 [GET]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\flask\\app.py\", line 1463, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\flask\\app.py\", line 872, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\flask\\app.py\", line 868, in full_dispatch_request\n",
-      "    rv = self.preprocess_request()\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\flask\\app.py\", line 1243, in preprocess_request\n",
-      "    rv = self.ensure_sync(before_func)()\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\dash\\dash.py\", line 1343, in _setup_server\n",
-      "    _validate.validate_layout(self.layout, self._layout_value())\n",
-      "  File \"c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\dash\\_validate.py\", line 416, in validate_layout\n",
-      "    raise exceptions.DuplicateIdError(\n",
-      "dash.exceptions.DuplicateIdError: Duplicate component id found in the initial layout: `contact-us-btn`\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -45,7 +20,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1bda611a110>"
+       "<IPython.lib.display.IFrame at 0x1bda47bc250>"
       ]
      },
      "metadata": {},
@@ -125,7 +100,7 @@
     "                                   'font-family': 'Lucida Handwriting',\n",
     "                                   }),\n",
     "\n",
-    "                    html.Button('Using GANs', id='learn-more-btn', n_clicks=0, \n",
+    "                    html.Button('Using GANs', id='gans', n_clicks=0, \n",
     "                            style={'marginRight': '10px',\n",
     "                                   'margin-left': '440px', \n",
     "                                   'marginBottom': '30px',\n",
@@ -134,7 +109,7 @@
     "                                   'display':'block'\n",
     "                                   }),\n",
     "\n",
-    "                    html.Button('Using Autoencoders', id='contact-us-btn', n_clicks=0,\n",
+    "                    html.Button('Using Autoencoders', id='autoencoders', n_clicks=0,\n",
     "                            style={'marginRight': '10px',\n",
     "                                   'margin-left': '440px',\n",
     "                                   'marginBottom': '30px',\n",
@@ -143,7 +118,7 @@
     "                                   'display':'block'\n",
     "                                   }),\n",
     "\n",
-    "                    html.Button('Using OpenCV', id='contact-us-btn', n_clicks=0,\n",
+    "                    html.Button('Using OpenCV', id='opencv', n_clicks=0,\n",
     "                            style={'marginRight': '10px',\n",
     "                                   'margin-left': '440px',\n",
     "                                   'marginBottom': '80px',\n",
